# Portfolio_Optimisation

./: .env.example  .gitignore  Dockerfile  EDA.md  Makefile  Parser.ipynb  README.md  docker-compose.yaml  error.txt  pyproject.toml  requirements.txt  snp500_yahoo_stocks.ipynb  usage.txt  yahoo_parser.py
configs/: config.yaml
data/raw/: snp500_stocks_example.csv
notebooks/: EDA.ipynb  NewsParser.ipynb  Parser.ipynb  snp500_yahoo_stocks.ipynb
notebooks/data/raw/: sp500tickers.pickle
portfolio_optimisation/: .env.example
portfolio_optimisation/api/: Dockerfile  app.py  config.py  docker-compose.yaml  error.txt  main.py  test.py
portfolio_optimisation/api/app/: config.py  main.py
portfolio_optimisation/api/app/parser/: parser_router.py  yahoo_parser.py
portfolio_optimisation/api/app/predictor/: predict_router.py  predictor.py
portfolio_optimisation/api/models/: preprocessor_pipeline.pkl
portfolio_optimisation/api/optimizer/: optimizer_router.py  test_optimizer_router.py
portfolio_optimisation/api/outputs/2024-01-04/17-15-21/.hydra/: config.yaml  hydra.yaml
portfolio_optimisation/api/outputs/2024-01-04/17-15-30/.hydra/: hydra.yaml  overrides.yaml
portfolio_optimisation/api/outputs/2024-01-04/17-15-39/.hydra/: config.yaml  hydra.yaml  overrides.yaml
portfolio_optimisation/api/outputs/2024-01-04/17-16-42/.hydra/: config.yaml  hydra.yaml  overrides.yaml
portfolio_optimisation/api/outputs/2024-01-04/17-18-14/.hydra/: hydra.yaml
portfolio_optimisation/api/outputs/2024-01-04/17-18-53/.hydra/: config.yaml  hydra.yaml  overrides.yaml
portfolio_optimisation/api/outputs/2024-01-04/17-19-42/.hydra/: config.yaml  hydra.yaml  overrides.yaml
portfolio_optimisation/api/outputs/2024-01-04/17-21-00/.hydra/: config.yaml  hydra.yaml  overrides.yaml
portfolio_optimisation/api/parser/: parser_router.py
portfolio_optimisation/api/predictor/: predict_router.py  test_predict_router.py
portfolio_optimisation/bot/: Dockerfile  bot.py  config.py  main.py  utils.py
portfolio_optimisation/classes/: README.MD  benzinga.py  benzinga_parser.py  client.py  dl_stock_predictor.py  llm_model.py  news_embedder.py  portfolio_optimizer.py  predictor.py  yahoo_parser.py
portfolio_optimisation/models/: financial_data_only.cbm  metrics_financial_data_only.json  metrics_news_tfidf_title_embedding_financial_data.json  metrics_nlp_news_financial_data.json  metrics_titles_embedding_financial_data.json  pipeline_news_embeddings.pkl  titles_embedding_financial_data.cbm
portfolio_optimisation/notebooks/: Benzinga_News_Parser.ipynb  EDA.ipynb  SNP500_Yahoo_Stocks_Parser.ipynb  dl.ipynb  embeddings.ipynb  eval.ipynb  feature_engeniring.ipynb  final.ipynb  nlp_cat_boost_exp.ipynb  optimization_algorithm.ipynb  prepare_news_for_llm.ipynb  train_model.ipynb
portfolio_optimisation/notebooks/catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
portfolio_optimisation/notebooks/catboost_info/learn/: events.out.tfevents
src/data/: yahoo_parser.py
