[tool.poetry]
name = "portfolio-optimisation"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
hydra-core = "^1.3.2"
scipy = "^1.11.4"
seaborn = "^0.13.1"
numpy = "^1.26.3"
openapi = "^1.1.0"
uvicorn = "^0.25.0"
fastapi = "^0.108.0"
pydantic = "^2.5.3"
openai = "^1.6.1"
aiogram = "^3.3.0"
asyncio = "^3.4.3"
ipykernel = "^6.28.0"
pandas = "^2.1.4"
textblob = "^0.17.1"
tiktoken = "^0.5.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
